--- a/app/src/main/res/layout/fragment_register_pet.xml
+++ b/app/src/main/res/layout/fragment_register_pet.xml
@@ -64,6 +64,7 @@
                 android:hint="Nome (Obrigatório)"
                 android:padding="10dp"
                 android:paddingStart="20dp"
+                android:singleLine="true"
                 android:textColor="@color/gray_800"
                 android:textColorHint="@color/gray_500"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -81,6 +82,7 @@
                 android:inputType="number"
                 android:padding="10dp"
                 android:paddingStart="20dp"
+                android:singleLine="true"
                 android:textColor="@color/gray_800"
                 android:textColorHint="@color/gray_500"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -96,6 +98,7 @@
                 android:hint="Raça (Obrigatório)"
                 android:padding="10dp"
                 android:paddingStart="20dp"
+                android:singleLine="true"
                 android:textColor="@color/gray_800"
                 android:textColorHint="@color/gray_500"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -111,6 +114,7 @@
                 android:hint="Porte (Obrigatório)"
                 android:padding="10dp"
                 android:paddingStart="20dp"
+                android:singleLine="true"
                 android:textColor="@color/gray_800"
                 android:textColorHint="@color/gray_500"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -127,6 +131,7 @@
                 android:hint="Sexo (Obrigatório)"
                 android:padding="10dp"
                 android:paddingStart="20dp"
+                android:singleLine="true"
                 android:textColor="@color/gray_800"
                 android:textColorHint="@color/gray_500"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -142,6 +147,7 @@
                 android:hint="Problemas de saúde (Obrigatório)"
                 android:padding="10dp"
                 android:paddingStart="20dp"
+                android:singleLine="true"
                 android:textColor="@color/gray_800"
                 android:textColorHint="@color/gray_500"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -157,6 +163,7 @@
                 android:hint="Alergias"
                 android:padding="10dp"
                 android:paddingStart="20dp"
+                android:singleLine="true"
                 android:textColor="@color/gray_800"
                 android:textColorHint="@color/gray_500"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -172,6 +179,7 @@
                 android:hint="Informções Adicionais"
                 android:padding="10dp"
                 android:paddingStart="20dp"
+                android:singleLine="true"
                 android:textColor="@color/gray_800"
                 android:textColorHint="@color/gray_500"
                 app:layout_constraintEnd_toEndOf="parent"
