--- a/app/src/main/res/layout/card_item_atendimento.xml
+++ b/app/src/main/res/layout/card_item_atendimento.xml
@@ -110,13 +110,14 @@
                             android:layout_marginStart="4dp"
                             android:textColor="@color/gray_800"
                             android:textStyle="bold"
-                            tools:text="João" />
+                            tools:text="R$ 50" />
                     </LinearLayout>
 
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal">
+                        android:orientation="horizontal"
+                        android:visibility="gone">
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -187,7 +188,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginBottom="4dp"
-                                android:text="Cliente: "
+                                android:text="CPF do Cliente: "
                                 android:textColor="@color/gray_500"
                                 android:textStyle="bold" />
 
@@ -211,7 +212,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginBottom="4dp"
-                                android:text="Pet: "
+                                android:text="ID do Pet: "
                                 android:textColor="@color/gray_500"
                                 android:textStyle="bold" />
 
